--- a/app/components/lookbook/ui/previews/display_options_dropdown/display_options_dropdown.html.erb
+++ b/app/components/lookbook/ui/previews/display_options_dropdown/display_options_dropdown.html.erb
@@ -1,4 +1,4 @@
-<%= render component_tag(x: {data: "displayOptionsEditor", "@change": "update"}) do %>
+<%= render component_tag(x: {data: "displayOptionsDropdown", "@change": "update"}) do %>
   <% options.each do |option| %>
     <div class="display-option">
       <label for="<%= option.name %>"><%= option.label %></label>
