--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -406,7 +406,30 @@
 
   --lb-app-color: var(--lb-color-base-900);
   --lb-app-divider-color: var(--lb-color-base-300);
-  --lb-app-focus-outline-color: var(--lb-color-accent-200);
+  --lb-app-outline-color-focus: var(--lb-color-accent-200);
+
+  /*
+   * Dropdowns
+   */
+
+  --lb-dropdown-color: var(--lb-app-color);
+  --lb-dropdown-background-color: var(--lb-color-white);
+  --lb-dropdown-border-color: var(--lb-app-divider-color);
+
+  /*
+   * Inputs
+   */
+
+  --lb-input-color: var(--lb-app-color);
+  --lb-input-background-color: var(--lb-color-white);
+  --lb-input-border-color: var(--lb-color-base-300);
+  --lb-input-outline-color-focus: var(--lb-color-accent-500);
+  --lb-input-placeholder-color: var(--lb-color-base-400);
+
+  --lb-checkbox-color: var(--lb-color-accent-700);
+  --lb-checkbox-background-color: var(--lb-color-white);
+  --lb-checkbox-border-color: var(--lb-color-base-400);
+  --lb-checkbox-outline-color-focus: var(--lb-color-accent-500);
 
   /*
    * Header
@@ -440,8 +463,10 @@
   --lb-status-bar-item-color-error: var(--lb-color-danger-600);
   --lb-status-bar-item-color-warning: var(--lb-color-warning-600);
   --lb-status-bar-item-color-info: var(--lb-color-info-600);
-  --lb-status-bar-notifications-color: var(--lb-app-color);
-  --lb-status-bar-notifications-background-color: var(--lb-color-white);
+  --lb-status-bar-notifications-color: var(--lb-dropdown-color);
+  --lb-status-bar-notifications-background-color: var(
+    --lb-dropdown-background-color
+  );
 
   /*
    * System message
@@ -541,6 +566,22 @@
   --lb-viewport-dimensions-background-color: var(--lb-color-base-200);
   --lb-viewport-handle-background-color: var(--lb-color-white);
   --lb-viewport-handle-icon-color: var(--lb-color-base-500);
+
+  /*
+   * Page
+   */
+
+  --lb-page-color: var(--lb-app-color);
+  --lb-page-background-color: var(--lb-color-white);
+  --lb-page-divider-color: var(--lb-app-divider-color);
+  --lb-page-title-color: var(--lb-app-color);
+
+  /*
+   * Display options dropdown
+   */
+
+  --lb-display-options-color: var(--lb-dropdown-color);
+  --lb-display-options-background-color: var(--lb-dropdown-background-color);
 }
 @font-face {
   font-family: "Inter";
@@ -757,20 +798,6 @@ dialog {
 textarea {
   resize: vertical;
 }
-input::-moz-placeholder,
-textarea::-moz-placeholder {
-  opacity: 1;
-  color: #9ca3af;
-}
-input::-moz-placeholder, textarea::-moz-placeholder {
-  opacity: 1;
-  color: #9ca3af;
-}
-input::placeholder,
-textarea::placeholder {
-  opacity: 1;
-  color: #9ca3af;
-}
 button,
 [role="button"] {
   cursor: pointer;
@@ -860,7 +887,7 @@ tr:not(:last-child) {
   outline: 1px solid transparent;
   outline-offset: 0;
   outline-color: hsl(228, 97%, 89%);
-  outline-color: var(--lb-app-focus-outline-color);
+  outline-color: var(--lb-app-outline-color-focus);
 }
 /* Utilities */
 .bg-checked {
@@ -886,8 +913,11 @@ select {
   -moz-appearance: none;
   appearance: none;
   background-color: #fff;
+  background-color: var(--lb-input-background-color);
   border-color: hsl(240, 5%, 84%);
-  border-color: var(--lb-color-base-300);
+  border-color: var(--lb-input-border-color);
+  color: hsl(240, 6%, 10%);
+  color: var(--lb-input-color);
   border-width: 1px;
   border-radius: 0px;
   padding-top: 0.5rem;
@@ -922,25 +952,24 @@ textarea:focus,
 select:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-  outline-color: hsl(235, 90%, 74%);
-  outline-color: var(--lb-color-accent-400);
-  /* border-color: var(--lb-color-accent-400); */
+  outline-color: hsl(239, 84%, 67%);
+  outline-color: var(--lb-input-outline-color-focus);
 }
 input::-moz-placeholder,
 textarea::-moz-placeholder {
   color: hsl(240, 5%, 65%);
-  color: var(--lb-color-base-400);
+  color: var(--lb-input-placeholder-color);
   opacity: 1;
 }
 input::-moz-placeholder, textarea::-moz-placeholder {
   color: hsl(240, 5%, 65%);
-  color: var(--lb-color-base-400);
+  color: var(--lb-input-placeholder-color);
   opacity: 1;
 }
 input::placeholder,
 textarea::placeholder {
   color: hsl(240, 5%, 65%);
-  color: var(--lb-color-base-400);
+  color: var(--lb-input-placeholder-color);
   opacity: 1;
 }
 ::-webkit-datetime-edit-fields-wrapper {
@@ -1006,10 +1035,11 @@ select {
   height: 1.25rem;
   width: 1.25rem;
   color: hsl(245, 58%, 51%);
-  color: var(--lb-color-accent-700);
+  color: var(--lb-checkbox-color);
   background-color: #fff;
-  border-color: hsl(235, 90%, 74%);
-  border-color: var(--lb-color-accent-400);
+  background-color: var(--lb-checkbox-background-color);
+  border-color: hsl(240, 5%, 65%);
+  border-color: var(--lb-checkbox-border-color);
   border-width: 1px;
 }
 [type="checkbox"] {
@@ -1023,7 +1053,7 @@ select {
   outline: 2px solid transparent;
   outline-offset: 2px;
   outline-color: hsl(239, 84%, 67%);
-  outline-color: var(--lb-color-accent-500);
+  outline-color: var(--lb-checkbox-outline-color-focus);
 }
 [type="checkbox"]:checked,
 [type="radio"]:checked {
@@ -1106,16 +1136,16 @@ select {
 .tippy-arrow:before{content:"";position:absolute;border-color:transparent;border-style:solid}
 .tippy-content{position:relative;padding:5px 9px;z-index:1}
 .tippy-box[data-theme~="dropdown"] {
+  background-color: #fff;
+  background-color: var(--lb-dropdown-background-color);
+  color: hsl(240, 6%, 10%);
+  color: var(--lb-dropdown-color);
+  border: 1px solid hsl(240, 5%, 84%);
+  border: 1px solid var(--lb-dropdown-border-color);
   box-shadow: 0 0 6px -1px rgba(0, 0, 0, 0.1),
     0 0 4px -2px rgba(0, 0, 0, 0.1);
   box-shadow: var(--lb-shadow-medium);
-  background: #fff;
-  background: var(--lb-color-white);
-  color: hsl(240, 4%, 16%);
-  color: var(--lb-color-base-800);
   max-width: 100%;
-  border: 1px solid hsl(240, 5%, 84%);
-  border: 1px solid var(--lb-app-divider-color);
   border-radius: 0;
   width: -moz-fit-content;
   width: fit-content;
@@ -1693,7 +1723,8 @@ select {
     z-index: 100;
   }
 [data-component="pane-group"][data-orientation="horizontal"] > .pane-group-gutter {
-      border-bottom: 1px solid var(--lb-split-pane-gutter-border-color);
+      border-bottom: 1px solid hsl(240, 5%, 84%);
+      border-bottom: 1px solid var(--lb-app-divider-color);
       width: 100%;
       height: 1px;
     }
@@ -2187,8 +2218,10 @@ select {
   font-family: "Open Sans Var", Avenir, Montserrat, Corbel, "URW Gothic",
     source-sans-pro, sans-serif;
   font-family: var(--lb-font-prose);
+  color: hsl(240, 6%, 10%);
+  color: var(--lb-page-color);
   background-color: #fff;
-  background-color: var(--lb-color-white);
+  background-color: var(--lb-page-background-color);
   min-height: 100vh;
 }
 [data-component="page"] .page-slat {
@@ -2199,13 +2232,15 @@ select {
   }
 [data-component="page"] .page-header {
     border-bottom: 1px solid hsl(240, 5%, 84%);
-    border-bottom: 1px solid var(--lb-color-base-300);
+    border-bottom: 1px solid var(--lb-page-divider-color);
     padding-top: 1.75rem;
     padding-bottom: 1.75rem;
     padding-top: var(--lb-spacing-x-large);
     padding-bottom: var(--lb-spacing-x-large);
   }
 [data-component="page"] .page-title {
+    color: hsl(240, 6%, 10%);
+    color: var(--lb-page-title-color);
     font-weight: 700;
     font-weight: var(--lb-font-weight-bold);
     font-size: 2.25rem;
@@ -2219,7 +2254,7 @@ select {
   }
 [data-component="page"] .page-footer {
     border-top: 1px solid hsl(240, 5%, 84%);
-    border-top: 1px solid var(--lb-color-base-300);
+    border-top: 1px solid var(--lb-page-divider-color);
     padding-top: 1.75rem;
     padding-bottom: 1.75rem;
     padding-top: var(--lb-spacing-x-large);
@@ -2260,46 +2295,39 @@ select {
 [data-component="page-metadata"] td {
     white-space: nowrap;
   }
-[data-component="display-options-editor"] {
+[data-component="display-options-dropdown"] {
   width: 280px;
   padding: 1rem;
   padding: var(--lb-spacing-medium);
   padding-top: 0.75rem;
   padding-top: var(--lb-spacing-small);
-  background: #fff;
+  color: hsl(240, 6%, 10%);
+  color: var(--lb-display-options-color);
+  background-color: #fff;
+  background-color: var(--lb-display-options-background-color);
 }
-[data-component="display-options-editor"] .title {
+[data-component="display-options-dropdown"] .title {
     font-size: 1rem;
     font-size: var(--lb-font-size-medium);
     margin-bottom: 1rem;
     margin-bottom: var(--lb-spacing-medium);
   }
-[data-component="display-options-editor"] .display-option + .display-option {
+[data-component="display-options-dropdown"] .display-option + .display-option {
     margin-top: 1rem;
     margin-top: var(--lb-spacing-medium);
   }
-[data-component="display-options-editor"] .display-option label {
+[data-component="display-options-dropdown"] .display-option label {
       font-weight: 600;
       font-weight: var(--lb-font-weight-semibold);
       display: block;
       margin-bottom: 0.5rem;
       margin-bottom: var(--lb-spacing-x-small);
     }
-[data-component="display-options-editor"] .display-option select {
+[data-component="display-options-dropdown"] .display-option select {
       font-size: 0.875rem;
       font-size: var(--lb-font-size-small);
     }
 [data-component="param-editor"] {
-  /* select,
-  input:not([type="checkbox"], [type="radio"], [type="file"]) {
-    min-width: 240px;
-    padding-inline: var(--lb-spacing-small);
-    padding-block: var(--lb-spacing-x-small);
-    font-size: var(--lb-font-size-medium);
-    border: 1px solid var(--lb-color-base-300);
-    border-radius: var(--lb-border-radius-large);
-    appearance: none;
-  } */
 }
 [data-component="preview-embed"] {
   border: 1px solid hsl(240, 5%, 84%);
