More theme improvements

--- a/public/lookbook-assets/theme-light.css
+++ b/public/lookbook-assets/theme-light.css
@@ -1,5 +1,7 @@
 :root,
 :root[data-theme="light"] {
+  --csstools-color-scheme--light: initial;
+  --csstools-color-scheme--dark:  ;
   color-scheme: light;
 
   /*
