--- a/assets/entrypoints/app.css
+++ b/assets/entrypoints/app.css
@@ -1,8 +1,5 @@
-@import "../css/tokens.css";
-@import "../css/fonts.css";
-@import "../css/reset.css";
 @import "../css/base.css";
 @import "../css/forms.css";
-@import "../css/tooltips.css";
+@import "../css/tippy.css";
 
 @import-glob "../../app/components/lookbook/ui/**/*.css";
