--- a/app/components/lookbook/ui/app/header/header.css
+++ b/app/components/lookbook/ui/app/header/header.css
@@ -1,16 +1,17 @@
 [data-component="header"] {
-  height: var(--lb-header-height);
+  height: var(--lb-size-3xl);
   color: var(--lb-header-color);
   background-color: var(--lb-header-background-color);
-  padding-inline: var(--lb-spacing-medium);
-  padding-bottom: 4px;
+  padding-inline: var(--lb-spacing-md);
+  padding-bottom: var(--lb-spacing-2xs);
   display: flex;
   align-items: center;
 
   .header-branding {
     display: flex;
     align-items: center;
-    column-gap: var(--lb-spacing-small);
+    column-gap: var(--lb-spacing-sm);
+    margin-right: auto;
   }
 
   .header-project-logo {
@@ -21,5 +22,9 @@
   }
 
   .header-project-branding {
+  }
+
+  .header-color-scheme-switcher {
+    margin-right: calc(-1 * var(--lb-spacing-md));
   }
 }
