--- a/assets/css/_fonts.css
+++ b/assets/css/_fonts.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Inter";
-  font-weight: 100 900;
+  font-family: "Inter Var";
+  font-weight: 200 900;
   font-display: swap;
   font-style: normal;
   font-named-instance: "Regular";
@@ -8,8 +8,8 @@
 }
 
 @font-face {
-  font-family: "Inter";
-  font-weight: 100 900;
+  font-family: "Inter Var";
+  font-weight: 200 900;
   font-display: swap;
   font-style: italic;
   font-named-instance: "Italic";
