--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -22,11 +22,11 @@ select {
   color: var(--lb-input-color);
   border-width: 1px;
   border-radius: 0px;
-  padding-block: var(--lb-spacing-x-small);
-  padding-inline: var(--lb-spacing-small);
+  padding-block: var(--lb-spacing-xs);
+  padding-inline: var(--lb-spacing-sm);
   font-size: 1rem;
   line-height: 1.2rem;
-  border-radius: var(--lb-border-radius-medium);
+  border-radius: var(--lb-border-radius-md);
   width: 100%;
 }
 
