--- a/public/lookbook-assets/theme-dark.css
+++ b/public/lookbook-assets/theme-dark.css
@@ -1,4 +1,4 @@
-:root[data-theme="dark"] {
+:root[data-color-scheme="dark"] {
   --csstools-color-scheme--light:  ;
   --csstools-color-scheme--dark: initial;
   color-scheme: dark;
